<resources>
    <string name="app_name">MyHome</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="account_default">Account</string>
    <string name="home_default">Home</string>
    <string name="notifications_default">Notifications</string>
    <string name="title_account">Account</string>
    <string name="terrace_lamp">Terrace Lamp</string>
    <string name="livingroom_lamp">Living Room Lamp</string>
    <string name="bedroom_lamp">Bedroom Lamp</string>
    <string name="front_door">Front Door</string>
    <string name="door_unlock">Shake to Unlock</string>
    <string name="door_lock">Shake to Lock</string>
    <string name="door_unauthorized_title">Unauthorized activity detected on front door</string>
    <string name="share">Share</string>
    <string name="reward_title">You have received your token reward</string>
    <string name="no_notification_available">No Notification Available</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="no_account_yet_create_one">Don\'t have account? <u>Sign up</u></string>
    <string name="login">Login</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="create_account">Create Account</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="password">Password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is incorrect</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_up">Sign Up</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_phone">Phone Number</string>
    <string name="prompt_address">Address</string>

    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="prompt_fullname">Full Name</string>
    <string name="register_header">Please fill in your personal details to register</string>
</resources>
