<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:switchMinWidth="56dp"
            android:text="@string/terrace_lamp"
            android:textSize="20sp" />

        <include layout="@layout/item_divider"/>

        <Switch
            android:id="@+id/switch2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:switchMinWidth="56dp"
            android:text="@string/livingroom_lamp"
            android:textSize="20sp" />

        <include layout="@layout/item_divider"/>

        <Switch
            android:id="@+id/switch3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="1"
            android:switchMinWidth="56dp"
            android:text="@string/bedroom_lamp"
            android:textSize="20sp" />

        <include layout="@layout/item_divider"/>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_door1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/front_door"
                    android:textSize="20sp"
                    android:textColor="@color/colorBlack"/>

                <Button
                    android:id="@+id/button_door1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/door_unlock"
                    android:clickable="false"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</FrameLayout>